--- a/templates/artikel.html.twig
+++ b/templates/artikel.html.twig
@@ -11,12 +11,12 @@
   </head>
   <body>
     <div class="site-wrapper">
-      {{ include (incHeader) }}
+      {% include (incHeader) with {'username': username, 'path' : '../'} %}
       <main>
         <nav>
           <ul class="main-navigation-ul">
             <li class="main-navigation-li main-navigation-li-active">
-              <a href="artikel.php">DER, DIE, DAS</a>
+              <a href="artikel.php">DER,&nbspDIE,&nbspDAS</a>
             </li>
             <li class="main-navigation-li">
               <a href="singular-plural.php">SINGULAR/PLURAL</a>
@@ -38,13 +38,14 @@
           </ul>
           <div class="content">
             {% if case != 1 %}
-              <form method="POST" action="{{ formAction }}">
+              <form class="article-form" method="POST" action="{{ formAction }}">
+              <div class="items-wrapper" >
                 {% for item in data %}
                   <div class="article-item">
                     {% if case == 3 %}
-                      {{ item.result == true ? '&#10004' : '&#10006' }} 
+                      {{ item.result == true ? '<span style="color: limegreen; width: 14px" >&#10004</span>' : '<span style="color: red; width: 14px" >&#10006</span>' }} 
                     {% endif %}
-                    <select id="artikel" name="{{ 'artikel_' ~ item.id }}">
+                    <select class="select" id="artikel" name="{{ 'artikel_' ~ item.id }}">
                     {% set selected = 'selected' %}
                       {% for option in options %}
                         <option value="{{ option }}" {{ item.userInput == option ? selected : '' }}>{{ option }}</option>
@@ -60,9 +61,15 @@
                     <input type="hidden" name="url" value="{{ thema.href }}" >
                     {% endif %}
                   {% endfor %}
-                <button type="submit" name="button" value="check">prüfen</button>
-                <button type="submit" name="button" value="reset">zurücksetzen</button>
+                  </div>
+                  <div class="button-wrapper" >
+                <button class="form-button" type="submit" name="button" value="check">prüfen</button>
+                <button class="form-button" type="submit" name="button" value="reset">zurücksetzen</button>
+                </div>
               </form>
+            {% endif %}
+            {% if message|length > 3 %}
+            <p>{{ message }}</p>
             {% endif %}
           </div>
         </div>
