--- a/templates/components/header.html.twig
+++ b/templates/components/header.html.twig
@@ -1,13 +1,19 @@
 <header>
   <div class="header-left-side">
-    <a href="../index.php"><img src="{{path}}" alt="home" class="home-icon" width="30px" height="30px"></a>
+    <a href="{{path ~ 'index.php'}}"><img src="{{path ~ 'img/home1.png'}}" alt="home" class="home-icon" width="30px" height="30px"></a>
   </div>
   <div class="header-title">
     <h1 class="header-h1">Teste Dein Deutsch</h1>
     <h2 class="header-h2">kleine Übungen für zwischendurch</h2>
   </div>
   <div class="header-right-side">
-    <a class="login-link" href="">login</a>
+
+  {% if username|length == 0 %}
+    <a class="login-link" href="../login.php">login</a>
+    {% else %}
+    <div style="position: absolute; top: 30px; right: 15px" >Hallo {{username}}</div>
+    <a class="login-link" href="../index.php?logout=true">logout</a>
+    {% endif %}
     <!-- <span class="header-span" >Foto von </span><a class="header-link" href="https://unsplash.com/@anniespratt?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Annie Spratt</a><span> auf </sp<n><a href="https://unsplash.com/de/fotos/ktny0VBR1rM?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> -->
   </div>
 </header>
