--- a/templates/singular-plural.html.twig
+++ b/templates/singular-plural.html.twig
@@ -15,7 +15,7 @@
     <main>
       <nav>
         <ul class="main-navigation-ul">
-          <li class="main-navigation-li "><a href="artikel.php">DER, DIE, DAS</a></li>
+          <li class="main-navigation-li "><a href="artikel.php">DER,&nbspDIE,&nbspDAS</a></li>
           <li class="main-navigation-li main-navigation-li-active"><a href="singular-plural.php">SINGULAR/PLURAL</a></li>
           <li class="main-navigation-li" ><a href="lueckentexte.php">LÜCKENTEXTE</a></li>
         </ul>
