--- a/templates/components/header.html.twig
+++ b/templates/components/header.html.twig
@@ -9,10 +9,10 @@
   <div class="header-right-side">
 
   {% if username|length == 0 %}
-    <a class="login-link" href="../login.php">login</a>
+    <a class="login-link" href="{{path}}login.php">login</a>
     {% else %}
     <div style="position: absolute; top: 30px; right: 15px" >Hallo {{username}}</div>
-    <a class="login-link" href="../index.php?logout=true">logout</a>
+    <a class="login-link" href="{{path}}index.php?logout=true">logout</a>
     {% endif %}
     <!-- <span class="header-span" >Foto von </span><a class="header-link" href="https://unsplash.com/@anniespratt?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Annie Spratt</a><span> auf </sp<n><a href="https://unsplash.com/de/fotos/ktny0VBR1rM?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> -->
   </div>
