--- a/templates/artikel.html.twig
+++ b/templates/artikel.html.twig
@@ -39,37 +39,53 @@
           <div class="content">
             {% if case != 1 %}
               <form class="article-form" method="POST" action="{{ formAction }}">
-              <div class="items-wrapper" >
-                {% for item in data %}
-                  <div class="article-item">
-                    {% if case == 3 %}
-                      {{ item.result == true ? '<span style="color: limegreen; width: 14px" >&#10004</span>' : '<span style="color: red; width: 14px" >&#10006</span>' }} 
-                    {% endif %}
-                    <select class="select" id="artikel" name="{{ 'artikel_' ~ item.id }}">
-                    {% set selected = 'selected' %}
-                      {% for option in options %}
-                        <option value="{{ option }}" {{ item.userInput == option ? selected : '' }}>{{ option }}</option>
-                      {% endfor %}
-                    </select>
-                    <span class="nomen-item">{{ item.nomen }}</span>
-                  </div>
-                {% endfor %}
-                  {% for thema in themen %}
-                    {% if thema.activeClass != '' %}
-                    <input type="hidden" name="urlId" value="{{ thema.thema_id }}" >
-                    <input type="hidden" name="count" value="{{ count }}" >
-                    <input type="hidden" name="url" value="{{ thema.href }}" >
-                    {% endif %}
-                  {% endfor %}
+                <div class="items-wrapper" >
+                  {% for item in data %}
+                    <div class="article-item">
+                      {% if case == 3 %}
+                        {{ item.result == true ? '<span style="color: limegreen; width: 14px" >&#10004</span>' : '<span style="color: red; width: 14px" >&#10006</span>' }} 
+                      {% endif %}
+                      <select class="select" id="artikel" name="{{ 'artikel_' ~ item.id }}">
+                      {% set selected = 'selected' %}
+                        {% for option in options %}
+                          <option value="{{ option }}" {{ item.userInput == option ? selected : '' }}>{{ option }}</option>
+                        {% endfor %}
+                      </select>
+                      <span class="nomen-item">{{ item.nomen }}</span>
+                    </div>
+                    {% endfor %}
+                    {% for thema in themen %}
+                      {% if thema.activeClass != '' %}
+                      <input type="hidden" name="urlId" value="{{ thema.thema_id }}" >
+                      <input type="hidden" name="page" value="{{ page }}" >
+                      <input type="hidden" name="pageNumber" value="{{ page }}" >
+                      {% endif %}
+                    {% endfor %}
                   </div>
                   <div class="button-wrapper" >
-                <button class="form-button" type="submit" name="button" value="check">prüfen</button>
-                <button class="form-button" type="submit" name="button" value="reset">zurücksetzen</button>
+                    <button class="form-button" type="submit" name="button" value="check">prüfen</button>
+                    <button class="form-button" type="submit" name="button" value="reset">zurücksetzen</button>
+                    <div class="next-button">
+                    {% for thema in themen %}
+                      {% if thema.activeClass != '' %}
+                        {% set nextpage =  page + 1 %}
+                        {% set prevpage =  page - 1 %}
+                        {% if page > 1 %}
+                          <span><a class="arrow" href="{{thema.href~'&page='~prevpage}}">&#x2190; zurück </a></span>
+                        {% endif %}
+                        {% if page < lastPage %}
+                          <span><a class="arrow"  href="{{thema.href~'&page='~nextpage}}"> weiter &#x2192;</a></span>
+                        {% endif %}
+                      {% endif %}
+                    {% endfor %}
+                    </div>
+                  </div>
                 </div>
+                
               </form>
             {% endif %}
-            {% if message|length > 3 %}
-            <p>{{ message }}</p>
+            {% if message|length > 1 %}
+              <p>{{ message }}</p>
             {% endif %}
           </div>
         </div>
