--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -15,7 +15,7 @@
     <main>
       <div class="landingpage-content-wrapper">
         <div class="landingpage-column">
-          <p>Keine Lust auf Benutzernamen und Passwörter?<br>
+          <p>Keine Lust auf Benutzernamen und Passwörter?<br><br>
             Hier geht's direkt zu den Übungen!</p>
           <a href="uebungen.php" class="start">Start!</a>
         </div>
