--- a/templates/lueckentexte.html.twig
+++ b/templates/lueckentexte.html.twig
@@ -11,24 +11,65 @@
 
 <body>
   <div class="site-wrapper">
-    {{include (incHeader)}}
+      {% include (inc.incHeader) with {'username': username, 'path' : '../'} %}
     <main>
-      <nav>
-        <ul class="main-navigation-ul">
-          <li class="main-navigation-li" ><a href="artikel.php">DER,&nbspDIE,&nbspDAS</a></li>
-          <li class="main-navigation-li "><a href="singular-plural.php">SINGULAR/PLURAL</a></li>
-          <li class="main-navigation-li main-navigation-li-active" ><a href="lueckentexte.php">LÜCKENTEXTE</a></li>
-        </ul>
-      </nav>
-      <div>
+      {% include (inc.incNav) with {'pos': pos, 'path': ''} %}
+      
+      <div class="content-wrapper">
         <ul class="sub-navigation-ul">
-          <li class="sub-navigation-li">test</li>
-          <li class="sub-navigation-li">...</li>
-          <li class="sub-navigation-li">...</li>
+        {% for category in categories %}
+          <li class="sub-navigation-li sub-navigation-li-width {{ category.activeClass }}">
+            <a href="{{ category.href }}">
+              {{ category.category }}
+            </a>
+          </li>
+        {% endfor %}
         </ul>
+        <div class="content">
+       
+          {% if case != 1 %}
+            <form class="article-form" method="POST" action="{{ formAction }}">
+              <div class="items-wrapper" > 
+                {% for item in data %}
+                  <div class="article-item">
+                    {% if case == 3 %}
+                      {{ item.result == true ? '<span style="color: limegreen; width: 14px" >&#10004</span>' : '<span style="color: red; width: 14px" >&#10006</span>' }} 
+                    {% endif %}
+                    {{ item.textPart1 }}
+                    <select class="select" id="artikel" name="{{ 'artikel_' ~ item.id }}">
+                     {% set selected = 'selected' %}
+                      {% for option in declinations[item.textPart2] %}
+                        <option value="{{ option }}" {{ item.userInput == option ? selected : '' }}>{{ option }}</option>
+                      {% endfor %}
+                    </select>
+                    <span class="nomen-item">{{ item.textPart3 }}</span>
+                  </div>
+                {% endfor %}
 
+                {% for category in categories %}
+                  {% if category.activeClass != '' %}
+                    <input type="hidden" name="urlId" value="{{ category.category_id }}" >
+                    <input type="hidden" name="page" value="{{ page }}" >
+                  {% endif %}
+                {% endfor %}
+              </div>
+              <div class="button-wrapper" >
+                <button class="form-button" type="submit" name="button" value="check">prüfen</button>
+                <button class="form-button" type="submit" name="button" value="reset">zurücksetzen</button>
+                <div class="next-button">
+                {% include (inc.incPrevNext) with {'group': categories} %}
+                </div>
+              </div>
+            </div>   
+          </form>
+          {% endif %}
+          {% if message|length > 1 %}
+           <p>{{ message }}</p>
+          {% endif %}
+        </div>
+      </div>
     </main>
-    {{include (incFooter)}}
+    {{include (inc.incFooter)}}
   </div>
 </body>
 
