--- a/templates/login.html.twig
+++ b/templates/login.html.twig
@@ -40,6 +40,9 @@
             <button class="" type="submit" name="button" value="login">Login</button>
           </section>
     </form>
+    <div style="margin: 1.0rem">
+      {{message}}
+    </div>
     </div>
 
     </main>
