--- a/templates/uebungen.html.twig
+++ b/templates/uebungen.html.twig
@@ -14,7 +14,7 @@
   {% include (incHeader) with {'username': username, 'path' : './'} %}
     <main>
     {% include (incNav) with {'pos': pos, 'path': 'uebungen/' } %}
-      <div>
+      <div class="content-wrapper">
       </div>
     </main>
     {{include (incFooter)}}
