--- a/templates/artikel.html.twig
+++ b/templates/artikel.html.twig
@@ -20,7 +20,7 @@
             {% for thema in themen %}
               <li class="sub-navigation-li {{ thema.activeClass }}">
                 <a href="{{ thema.href }}">
-                  {{ thema.thema }}
+                  {{ thema.group }}
                 </a>
               </li>
             {% endfor %}
@@ -45,7 +45,7 @@
                     {% endfor %}
                     {% for thema in themen %}
                       {% if thema.activeClass != '' %}
-                      <input type="hidden" name="urlId" value="{{ thema.thema_id }}" >
+                      <input type="hidden" name="urlId" value="{{ thema.group_id }}" >
                       <input type="hidden" name="page" value="{{ page }}" >
                       {% endif %}
                     {% endfor %}
@@ -62,7 +62,7 @@
               </form>
             {% endif %}
             {% if message|length > 1 %}
-              <p>{{ message }}</p>
+              <p class="message">&#8656;  {{ message }}</p>
             {% endif %}
           </div>
         </div>
